@@ -1,3 +1,6 @@
+2011-10-12 tatuya
+* Add preferred_accounting_bank_account_display_method into AccountingPreference to select the way to display bank account.
+
 2011-06-20 Kazuhiko
 * add delivery_mode category in TradeModelPath.
 
